opam-version: "2.0"
name: "kkmarkdown"
version: "1.0.0"
synopsis: "A safe markdown engine"
description: """
The goals of kkmarkdown are,

* To avoid XSS attack, by supporting limited markdown syntax.
* To run the same markdown engine in both server and client sides, thanks to js_of_ocaml.
"""
maintainer: "kkeundotnet <kkeundotnet@gmail.com>"
authors: "kkeundotnet <kkeundotnet@gmail.com>"
license: "Unlicense"
homepage: "https://github.com/kkeundotnet/kkmarkdown"
bug-reports: "https://github.com/kkeundotnet/kkmarkdown/issues"
dev-repo: "git+https://github.com/kkeundotnet/kkmarkdown.git"
depends: [
  "dune" {build}
  "dune-build-info"
  "js_of_ocaml"
  "js_of_ocaml-ppx"
  "alcotest" {with-test}
  "odoc" {with-doc}
]
build: ["dune" "build" "-p" name "-j" jobs]
