opam-version: "2.0"
synopsis: "A safe markdown engine"
description: """
Two main goals of kkmarkdown are:

* avoiding XSS attack by limiting supported markdown syntax,
* enabling us to run the same markdown engine in both server and client sides, thanks to js_of_ocaml.
"""
maintainer: "kkeundotnet <kkeundotnet@gmail.com>"
authors: "kkeundotnet <kkeundotnet@gmail.com>"
license: "Unlicense"
homepage: "https://github.com/kkeundotnet/kkmarkdown"
bug-reports: "https://github.com/kkeundotnet/kkmarkdown/issues"
dev-repo: "git+https://github.com/kkeundotnet/kkmarkdown.git"
depends: [
  "ocaml" {>= "4.14.0"}
  "dune" {>= "3.6"}
  "alcotest" {with-test}
  "dune-build-info"
  "js_of_ocaml"
  "js_of_ocaml-ppx"
  "odoc" {with-doc}
]
build: ["dune" "build" "-p" name "-j" jobs]
