opam-version: "2.0"
synopsis: "A safe markdown engine"
description: """
The goals of this engine are:

* To avoid XSS attack by limiting markdown syntax being supported.
* To run the same markdown engine both in server and client sides, thanks to js_of_ocaml.
"""
maintainer: "kkeundotnet <kkeundotnet@gmail.com>"
authors: "kkeundotnet <kkeundotnet@gmail.com>"
license: "Unlicense"
homepage: "https://github.com/kkeundotnet/kkmarkdown"
bug-reports: "https://github.com/kkeundotnet/kkmarkdown/issues"
dev-repo: "git+https://github.com/kkeundotnet/kkmarkdown.git"
depends: [
  "ocaml" {>= "5.3.0"}
  "dune" {>= "3.17.2"}
  "alcotest" {with-test}
  "dune-build-info"
  "js_of_ocaml"
  "js_of_ocaml-ppx"
  "odoc" {with-doc}
]
build: ["dune" "build" "-p" name "-j" jobs]
