opam-version: "2.0.4"
maintainer: "kkeundotnet@gmail.com"
authors: ["kkeundotnet"]
homepage: "https://github.com/kkeundotnet/sdown"
bug-reports: "https://github.com/kkeundotnet/sdown/issues"
dev-repo: "https://github.com/kkeundotnet/sdown.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

build-test: ["dune" "runtest" "-p" name]

depends: [
  "dune" {build}
  "alcotest" {test}
]
