; names = name of the files to compile into executables
; public_names = name of the executables
(executable
 (name KkmarkdownJs)
 (modes js)
 (libraries kkmarkdown.lib js_of_ocaml)
 (preprocess (pps js_of_ocaml-ppx)))

(rule
 (targets kkmarkdown.js)
 (action
  (copy %{dep:KkmarkdownJs.bc.js} %{targets})))

(install
 (files kkmarkdown.js)
 (section share)
 (package kkmarkdown))
